--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
-    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-plugin-slug": "^2.0.0",
+    "gatsby-remark-images": "^6.14.0",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-filesystem": "^4.14.0",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "prop-types": "^15.8.1",
