--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "prop-types": "^15.8.1",
         "react": "^17.0.1",
         "react-bootstrap": "^2.3.1",
+        "react-bootstrap-range-slider": "^3.0.8",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
         "react-redux": "^8.0.2"
