--- a/package.json
+++ b/package.json
@@ -6,35 +6,35 @@
     "author": "Patrick W. McMahon <patrick.w.mcmahon@gmail.com>",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.5",
-        "ace-builds": "^1.16.0",
+        "ace-builds": "^1.23.1",
         "axios": "^1.2.2",
         "bootstrap": "^5.2.3",
-        "gatsby": "^4.14.1",
-        "gatsby-plugin-gatsby-cloud": "^4.13.0",
-        "gatsby-plugin-image": "^2.13.0",
-        "gatsby-plugin-manifest": "^4.13.0",
-        "gatsby-plugin-no-sourcemaps": "^4.13.0",
-        "gatsby-plugin-offline": "^5.13.0",
-        "gatsby-plugin-react-helmet": "^5.13.0",
-        "gatsby-plugin-sharp": "^4.13.0",
+        "gatsby": "5.11.0",
+        "gatsby-plugin-gatsby-cloud": "5.11.0",
+        "gatsby-plugin-image": "3.11.0",
+        "gatsby-plugin-manifest": "5.11.0",
+        "gatsby-plugin-no-sourcemaps": "5.11.0",
+        "gatsby-plugin-offline": "6.11.0",
+        "gatsby-plugin-react-helmet": "6.11.0",
+        "gatsby-plugin-sharp": "5.11.0",
         "gatsby-plugin-slug": "^2.0.0",
-        "gatsby-remark-images": "^6.14.0",
+        "gatsby-remark-images": "7.11.0",
         "gatsby-remark-relative-images": "^2.0.2",
-        "gatsby-source-filesystem": "^4.14.0",
-        "gatsby-transformer-remark": "^5.13.0",
-        "gatsby-transformer-sharp": "^4.13.0",
+        "gatsby-source-filesystem": "5.11.0",
+        "gatsby-transformer-remark": "6.11.0",
+        "gatsby-transformer-sharp": "5.11.0",
         "prop-types": "^15.8.1",
-        "react": "^17.0.1",
+        "react": "^18.2.0",
         "react-ace": "^10.1.0",
         "react-bootstrap": "^2.7.0",
         "react-bootstrap-range-slider": "^3.0.8",
-        "react-dom": "^17.0.1",
+        "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-redux": "^8.0.2",
         "react-simple-tree-menu": "^1.1.18"
     },
     "devDependencies": {
-        "prettier": "^2.6.2"
+        "prettier": "^3.0.0"
     },
     "keywords": [
         "gatsby",
