--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
     "description": "Military Knowledge Online website",
     "version": "0.1.0",
     "author": "Patrick W. McMahon <patrick.w.mcmahon@gmail.com>",
-    "engines" : { 
-        "npm" : ">=9.7.2",
-        "node" : ">=18.16.0"
-    },
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.5",
         "ace-builds": "^1.23.1",
@@ -27,6 +23,7 @@
         "gatsby-source-filesystem": "5.11.0",
         "gatsby-transformer-remark": "6.11.0",
         "gatsby-transformer-sharp": "5.11.0",
+        "node": "^18.16.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-ace": "^10.1.0",
