--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
         "axios": "^1.2.2",
         "bootstrap": "^5.2.3",
         "gatsby": "5.11.0",
-        "gatsby-plugin-gatsby-cloud": "5.11.0",
         "gatsby-plugin-image": "3.11.0",
         "gatsby-plugin-manifest": "5.11.0",
         "gatsby-plugin-no-sourcemaps": "5.11.0",
-        "gatsby-plugin-offline": "6.11.0",
         "gatsby-plugin-react-helmet": "6.11.0",
-        "gatsby-plugin-sharp": "5.11.0",
         "gatsby-plugin-slug": "^2.0.0",
         "gatsby-remark-images": "7.11.0",
         "gatsby-remark-relative-images": "^2.0.2",
         "gatsby-source-filesystem": "5.11.0",
         "gatsby-transformer-remark": "6.11.0",
-        "gatsby-transformer-sharp": "5.11.0",
         "node": "^18.16.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
@@ -43,6 +39,10 @@
         "js"
     ],
     "license": "0BSD",
+    "browser": {
+        "path": false,
+        "stream": false
+    },
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
