fix missing dependencies for styled-components
in the future as i rebuild the dockable component to make my own i will be removing this dependency.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-redux": "^8.0.2",
-        "react-simple-tree-menu": "^1.1.18"
+        "react-simple-tree-menu": "^1.1.18",
+        "styled-components": "^6.1.8"
     },
     "devDependencies": {
         "prettier": "^3.0.0"
